--- a/index.html
+++ b/index.html
@@ -1,15 +1,37 @@
+<!DOCTYPE html>
 <html>
-    <h1>
-        Hi Im dante
-    </h1>
-    <body>
-        <h2>About me</h2>
-        <p>
-            I am a genius tech invertor/coder
-        </p>
-        <h2>What I'm working on</h2>
-        <p>
-            I am working on this website and currently coding it right now!
-        </p>
-    </body>
+<head>
+  <title>Dante's Coolness</title>
+  <style>
+    /* Add your custom CSS styles here */
+    body {
+      background-color: #f0f0f0;
+      text-align: center;
+    }
+    h1 {
+      animation: bounce 2s infinite;
+    }
+    @keyframes bounce {
+      0% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(-20px);
+      }
+      100% {
+        transform: translateY(0);
+      }
+    }
+  </style>
+</head>
+<body>
+  <h1>Dante: The Coolest Person Ever!</h1>
+  <p>Check out these cool animations!</p>
+  <div id="animation-container">
+    </div>
+  <script>
+    // JavaScript for more complex animations
+    // ...
+  </script>
+</body>
 </html>
