--- a/index.html
+++ b/index.html
@@ -55,18 +55,18 @@
     <h2>Projects</h2>
     <div class="project-card">
       <h3>Project 1: Successful Team Leadership</h3>
-      <p>Led a team of [number] to [achieve a goal]. Successfully managed [challenges] and maintained a positive team environment.</p>
+      <p>Led a team of 5 to work on a asignment. Successfully managed to finish and maintained a positive team environment.</p>
     </div>
     <div class="project-card">
       <h3>Project 2: Innovative Problem Solving</h3>
-      <p>Developed creative solutions to [complex problem]. Demonstrated strong analytical and critical thinking skills.</p>
+      <p>Developed creative solutions to tech problems. Demonstrated strong analytical and critical thinking skills.</p>
     </div>
   </section>
 
   <section class="section">
     <h2>Contact</h2>
-    <p>Email: dante@example.com</p>
-    <p>Phone: (123) 456-7890</p>
+    <p>Email: dantehunt2012@icloud.com or hunt52136+work@gmail.com</p>
+    <p>Phone: (775) 525 1593</p>
   </section>
 
   <section class="section">
