--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
     .section {
       margin: 20px;
     }
+
+    .skill-list, .interest-list {
+      list-style: none;
+      padding: 0;
+    }
   </style>
 </head>
 <body>
@@ -55,7 +60,7 @@
     <h2>Projects</h2>
     <div class="project-card">
       <h3>Project 1: Successful Team Leadership</h3>
-      <p>Led a team of 5 to work on a asignment. Successfully managed to finish and maintained a positive team environment.</p>
+      <p>Led a team of 5 to finish a assignment. I successfully managed and maintained a positive team environment.</p>
     </div>
     <div class="project-card">
       <h3>Project 2: Innovative Problem Solving</h3>
@@ -64,8 +69,50 @@
   </section>
 
   <section class="section">
+    <h2>Skills</h2>
+    <ul class="skill-list">
+      <li>Strong background in tech/coding</li>
+      </ul>
+  </section>
+
+  <section class="section">
+    <h2>Interests</h2>
+    <ul class="interest-list">
+      <li>Technology</li>
+      <li>Coding</li>
+      </ul>
+  </section>
+  <script>
+    // Add more JavaScript for interactive elements
+    // For example, you could use a library like GSAP for more complex animations
+  </script>
+</body>
+</html> Successfully managed [challenges] and maintained a positive team environment.</p>
+    </div>
+    <div class="project-card">
+      <h3>Project 2: Innovative Problem Solving</h3>
+      <p>Developed creative solutions to tech problems. Demonstrated strong analytical and critical thinking skills.</p>
+    </div>
+  </section>
+
+  <section class="section">
+    <h2>Skills</h2>
+    <ul class="skill-list">
+      <li>Strong background in tech/coding</li>
+      </ul>
+  </section>
+
+  <section class="section">
+    <h2>Interests</h2>
+    <ul class="interest-list">
+      <li>Technology</li>
+      <li>Coding</li>
+      </ul>
+  </section>
+
+  <section class="section">
     <h2>Contact</h2>
-    <p>Email: dantehunt2012@icloud.com or hunt52136+work@gmail.com</p>
+    <p>Email: hunt52136+work@gmail.com</p>
     <p>Phone: (775) 525 1593</p>
   </section>
 
