--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     // For example, you could use a library like GSAP for more complex animations
   </script>
 </body>
-</html> Successfully managed [challenges] and maintained a positive team environment.</p>
+</html> Successfully managed a group of 5 and maintained a positive team environment.</p>
     </div>
     <div class="project-card">
       <h3>Project 2: Innovative Problem Solving</h3>
@@ -99,7 +99,8 @@
     <h2>Skills</h2>
     <ul class="skill-list">
       <li>Strong background in tech/coding</li>
-      </ul>
+      <li>Helped my grandpa hide tokens across death vally</li>
+    </ul>
   </section>
 
   <section class="section">
